<resources>
    <string name="app_name">Swosh</string>
    <string name="action_settings">Settings</string>
    <string name="phone">Recipient</string>
    <string name="amount">Amount (SEK)</string>
    <string name="message">Message</string>
    <string name="expiration">Expires</string>
    <string name="create_button">Generate link</string>

    <string-array name="amount_name">
        <item>1 week</item>
        <item>1 day</item>
        <item>12 hours</item>
        <item>1 hour</item>
        <item>30 minutes</item>
        <item>10 minutes</item>
    </string-array>

    <string name="response_title">Swosh link</string>
    <string name="share_button">Share</string>
    <string name="response_id">ID</string>
    <string name="response_amount_label">Amount (SEK)</string>
    <string name="response_message_label">Message</string>

    <string name="home_placeholder1">You have not created any Swosh links yet :(</string>
    <string name="home_placeholder2">Create a new Swish pay request by clicking the button below</string>
    <string name="home_button">New pay link</string>
    <string name="TAG_CREATE_FRAGMENT">CREATE_FRAGMENT</string>
    <string name="TAG_RESPONSE_FRAGMENT">RESPONSE_FRAGMENT</string>
    <string name="TAG_HOME_FRAGMENT">HOME_FRAGMENT</string>
    <string name="ACTIONBAR_TITLE_NEW_LINK">Add new</string>
    <string name="ACTIONBAR_TITLE_YOUR_SWISH_LINKS">Active Swish links</string>
    <string name="ACTIONBAR_TITLE_SWOSH_LINK">Swish link</string>
    <string name="SHARED_PREFS_SWOSHES">SHARED_PREFS_SWOSHES</string>
    <string name="JSON_TAG_PHONE">JSON_PHONE</string>
    <string name="JSON_TAG_AMOUNT">JSON_AMOUNT</string>
    <string name="JSON_TAG_MESSAGE">JSON_MESSAGE</string>
    <string name="JSON_TAG_EXPIRATION">JSON_EXPIRATION</string>
    <string name="JSON_TAG_ID">JSON_ID</string>
    <string name="JSON_TAG_URL">JSON_URL</string>
    <string name="menu_share">Share</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="done">Done</string>
    <string name="share">Share via</string>
    <string name="amount_error">Add the amount of money the request is for</string>
    <string name="expires_in">Expires in</string>
</resources>
