<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="48dp"
    android:paddingBottom="@dimen/padding_standard"
    android:paddingTop="@dimen/padding_standard"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:scrollbars="vertical"
            android:id="@+id/swish_recycle_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

    </RelativeLayout>

    <LinearLayout
        android:visibility="visible"
        android:id="@+id/info_box"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="100dp"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/home_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/home_placeholder1" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <TextView
                android:id="@+id/home_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/home_placeholder2"/>
        </RelativeLayout>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/padding_standard"
        android:layout_marginBottom="@dimen/margin_large">

        <Button
            android:id="@+id/home_button"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:textColor="@color/colorAccent"
            android:text="@string/home_button"
            android:background="@drawable/flat_purple_button" />
    </RelativeLayout>
</LinearLayout>
