<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/padding_standard"
    android:paddingRight="@dimen/padding_standard"
    android:paddingLeft="@dimen/padding_standard"
    tools:context="me.swosh.android.fragments.CreateFragment"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_container_input"
        android:layout_marginTop="76dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/phone_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/ic_phone_24px"
            android:layout_centerVertical="true"/>

        <android.support.design.widget.TextInputLayout
            android:layout_marginStart="@dimen/margin_small"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/phone_icon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_container_input">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/phone_text"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"/>

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_container_input">

        <ImageView
            android:id="@+id/money_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/ic_attach_money_24px"
            android:layout_centerVertical="true"/>

        <android.support.design.widget.TextInputLayout
            android:layout_marginStart="@dimen/margin_small"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/money_icon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_container_input">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/amount"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"/>

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_container_input">

        <ImageView
            android:id="@+id/duration_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/ic_access_time_24px"
            android:layout_centerVertical="true"/>

        <Spinner
            android:id="@+id/expiration_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_toEndOf="@id/duration_icon"
            android:entries="@array/amount_name" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/message"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message"/>

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/padding_standard"
        android:layout_marginBottom="@dimen/margin_small">

        <Button
            android:id="@+id/create_button"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:textColor="@color/colorAccent"
            android:text="@string/create_button"
            android:background="@drawable/flat_purple_button" />
    </RelativeLayout>


</LinearLayout>
